--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Project explains all Node JS examples",
   "main": "app.js",
   "publishConfig": {
-    "registry": "http://3.110.51.239:9980/mithuntechnologies/repository/nodejsrepomss/"
+    "registry": "http://172.31.10.30:8081/yaswanth/repository/canarabank.npm/"
   },
   
   "scripts": {
